<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".d">

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:text="@string/tv4"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:text="@string/tv5"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:text="@string/tv6"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:ems="10"
        android:hint="@string/txt2"
        android:inputType="number"
        android:textAlignment="center" />


    <Button
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1" />

</LinearLayout>