<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".s">

    <Space
        android:layout_width="match_parent"
        android:layout_height="98dp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:hint="@string/txt3"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="105dp" />

    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:ems="10"
        android:hint="@string/txt2"
        android:inputType="number"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="74dp" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:text="@string/txt1"
        android:textAlignment="center" />
</LinearLayout>